Didn't like font-size change

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2" style="font-size: 24px">
+                    <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Education</h2>
                             <hr class="star-primary">
@@ -348,7 +348,7 @@
             </div>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2" style="font-size: 24px">
+                    <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Projects</h2>
                             <hr class="star-primary">
