--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
                             <h2>Intro to World Religion</h2>
                             <hr class="star-primary">
 							<p>
-								This elective informed me the practices and beliefs of many religions around the world and encouraged acceptance 
-								of their differences. In the software world I think it is important to create with all people in mind and this class 
+								This elective informed me of the practices and beliefs of many religions around the world and encouraged acceptance 
+								of their differences. In the software world I think it is important to design with all people in mind and this class 
 								has helped add some insight on people that believe different things than I do.
 							</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
