--- a/index.html
+++ b/index.html
@@ -423,11 +423,12 @@
                             <h2>Reflection</h2>
                             <hr class="star-primary">
 								<div class="list-group">
+									<a href="#goalModal" class="list-group-item portfolio-link" data-toggle="modal">My Goals</a>
 									<a href="#elect1Modal" class="list-group-item portfolio-link" data-toggle="modal">Intro to World Religion</a>
 									<a href="#elect2Modal" class="list-group-item portfolio-link" data-toggle="modal">Software Architecture</a>
 									<a href="#elect3Modal" class="list-group-item portfolio-link" data-toggle="modal">Intro to Psychology</a>
 									<a href="#elect4Modal" class="list-group-item portfolio-link" data-toggle="modal">Intro to Women's Studies</a>
-								</div>
+									</div>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -479,6 +480,32 @@
 								This project was developed during HackISU in the fall of 2015. Using Google Polymer as a template we created
 								an HTML canvas that continued to draw a line while following voice commands to change direction, stop, and start again.
 								My involvement in this project was focused on implementing the features of Google Polymer and researching voice recognition.
+							</p>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+	<div class="portfolio-modal modal fade" id="elect1Modal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>My Goals</h2>
+                            <hr class="star-primary">
+							<p>
+								My short-term goals are to graduate with a 3+ GPA and find a job within the Iowa City area.
+								Long-term I'd like to move somewhere warm with my girlfriend and either work remote from my
+								previous job or find another in my new area.
 							</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
