--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
             </div>
         </div>
     </div>
-	<div class="portfolio-modal modal fade" id="elect1Modal" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="goalModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
