--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
                 <div class="col-lg-12 text-center">
                     <h2>Introduction</h2>
                     <hr class="star-primary">
+					<p>I am a senior software engineer at Iowa State University. Most of my experience here at ISU has been in java
+					applications and then web development. Outside of school I enjoy playing tennis, swimming, and rooting for the 
+					Cyclones.</span>
                 </div>
             </div>
             <div class="row">
@@ -111,7 +114,10 @@
                 <div class="col-lg-12 text-center">
                     <h2>Career Objective</h2>
                     <hr class="star-primary">
-                </div>
+					<p>My career objectives for the future are to expand into other topics such
+					as Big Data or the Vehicle Telematics and find where I want to make my impact on the world of software.
+					</p>
+				</div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
@@ -181,7 +187,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#resumeModal" class="portfolio-link" data-toggle="modal">
+                    <a href="img/resume.pdf" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <div class="col-lg-12 text-center">
@@ -268,8 +274,10 @@
                 <div class="row">
                     <div class="footer-col col-md-12">
                         <h3>Contact Me</h3>
-                        <p>phippen@iastate.edu<br>
-                        641-226-8056</p>
+                        <p>phippen@iastate.edu</p>
+						<p><a href="github.com/phippen">GitHub</a></p>
+						<p><a href="https://www.linkedin.com/in/michael-phippen">LinkedIn</a></p>
+						<p>641-226-8056</p>
                     </div>
                 </div>
             </div>
@@ -333,6 +341,25 @@
                         <div class="modal-body">
                             <h2>Work Experience</h2>
                             <hr class="star-primary">
+							<h2>MetaBlast!</h2>
+							<p>
+								This was a project headed by a Iowa State professor to create an educational
+								videogame to teach children on the biology of a soy bean plant as well as many 
+								biology basics. I worked with another software engineer and a graphic designer who 
+								created the visuals. My job was first to learn C# and how to create scripts for Unity.
+								My two major contributions to the project were creating logic for the assests involved 
+								with my assigned 'side-quest' to teach about nematodes, and implementing an inventory system 
+								for the player.
+							</p><br>
+							<h2>Web Development IT</h2>
+							<p>
+								I currently work on campus for the Web Development IT staff as a part-time developer.
+								I typically work with a few other part-time devs and a full-time project lead. Using mostly 
+								PHP and JQuery with Zend Framework 2, we create and maintain web applications to benefit university 
+								students and staff. One example of a project I have been assigned is a 'sell-and-trade' application for students and faculty 
+								to find people interesting in purchasing tickets or unwanted items, it also allows them to setup carpools 
+								during the week to save students gas who perhaps have an intership at the same company.
+							</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
@@ -379,27 +406,6 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h2>Senior Design</h2>
-                            <hr class="star-primary">
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="portfolio-modal modal fade" id="resumeModal" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Resume</h2>
                             <hr class="star-primary">
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
