--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <div class="caption">
                             <div class="caption-content">
                                 <div class="col-lg-12 text-center">
-									Education
+									TEST Education
 								</div>
                             </div>
                         </div>
